# django-production

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
django_production/: __init__.py  __main__.py  data.py  main.py  modifiers.py  settings.py
django_production/fixers/: installed_apps.py  middleware.py
tests/: default_django_settings.py  test_patch.py  test_rewrite.py
tests/fixers/: test_installed_apps.py  test_middleware.py  tools.py
